--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JSSS Itinerary</title>
+    <title>CANADA Itinerary</title>
     <style>
         /* Add your CSS styles here */
         body {
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <h1>Taiwan</h1>
+    <h1>Canada</h1>
     <table>
         <tr>
             <th>Accomodation</th>
