--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <style>
         /* Add your CSS styles here */
         body {
-            font-family: Arial, sans-serif;
+            font-family: Calibri, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #F5DBD6;
+            background-color: #F8E8EE;
         }
         table {
             width: 100%;
