--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             vertical-align: top; /* Align contents to the top */
         }
         th {
-            background-color: #f2f2f2;
+            background-color: #FDCEDF;
         }
         .Remarks-column p {
             margin-bottom: 50px; /* Add padding-bottom for spacing within the Description column */
