--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-family: Calibri, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #F8E8EE;
+            background-color: #F9F5F6;
         }
         table {
             width: 100%;
@@ -35,14 +35,12 @@
     <h1>Canada</h1>
     <table>
         <tr>
-            <th>Accomodation</th>
             <th>Date</th>
             <th>Time</th>
             <th>Actvities</th>
             <th class="Remarks-column">Remarks</th>
         </tr>
         <tr>
-            <td>Hotel Cozzi Ximen Tainan</td>
             <td>Day 1 </p> 4th April</td>
             <td>6:20am-7:20am <br> <br> <br> 1:10pm - 2pm <br><br><br> 3.34pm </td>
             <td>Check-in at Singapore Changi Airport Terminal 3 - Flight No. SQ 876 </p>
@@ -61,7 +59,6 @@ Reservation No: 05664866
 Agoda Booking ID: 1168583249 </td>
         </tr>
         <tr>
-            <td>Hotel Cozzi Ximen Tainan</td>
             <td>Day 2 </p> 5th April</td>
             <td></td>
             <td>An Ping District <br><br> </p>
@@ -72,7 +69,6 @@ Contact Number: +886 6 223 5901
 Email: labellemaisoncafe@gmail.com</td>
         </tr>
                 <tr>
-            <td>SOF Taichung 植光花園酒店</td>
             <td>Day 3 </p> 6th April</td>
             <td>9:30am<br><br><br>11:13am</td>
             <td>Check-out from Hotel Cozzi Ximen Tainan </p> Travel to Taichung via HSR (High Speed Rail).https://en.thsrc.com.tw/
@@ -87,7 +83,6 @@ Add:  No. 52號, Guangfu Rd, Central District, Taichung City, Taiwan 400
         </tr>
         
                <tr>
-            <td>SOF Taichung 植光花園酒店</td>
             <td>Day 4 </p> 7th April</td>
             <td>07:30am </p> 06:00pm </td>
             <td>Sun Moon Lake Day Tour  <a href="https://www.klook.com/en-SG/activity/99499-nantou-sunmoonlakecrescentbay-gaomei-wetlands-daytour/ "> https://www.klook.com/en-SG/activity/99499-nantou-sunmoonlakecrescentbay-gaomei-wetlands-daytour/ </a> </p>
@@ -97,14 +92,12 @@ Back from tour </p>
             <td><b>Tour guide fetch us from hotel</b>  </td>
         </tr>
                 <tr>
-            <td>向海那漾 Nayang Beach GLAMPING </td>
             <td>Day 5 </p> 8th April</td>
             <td></td>
             <td>Check out from SOF Taichung 植光花園酒店 </p> Check in Nayang Beach resort <a href="https://www.nayangbeach.com.tw/index.php?module=faq&mn=5&f=content&tid=28150"> https://www.nayangbeach.com.tw/index.php?module=faq&mn=5&f=content&tid=28150</a> </td>
             <td></td>
         </tr>
                 <tr>
-            <td>Traders Road Hotel Theme</td>
             <td>Day 6 </p> 9th April</td>
             <td><br><br>09:00<br><br>11:00<br><br><br><br><br><br><br><br>8:00pm</td>
             <td>Check-out from  向海那漾 Nayang Beach</p>
@@ -123,21 +116,18 @@ Contact Number: +886 2-2311-9881
 Add: 30號, Xining Rd, Ximen, Wanhua District, Taipei City, TW </td>
         </tr>
                 <tr>
-            <td> Traders Road Hotel Theme</td>
             <td>Day 7 </p> 10th April</td>
             <td></td>
             <td></td>
             <td>  </td>
         </tr>
                 <tr>
-            <td> Traders Road Hotel Theme</td>
             <td>Day 8 </p> 11th April</td>
             <td></td>
             <td>Bitou Cape Park </p> Jiufen</td>
             <td></td>
         </tr>
                 <tr>
-            <td> Traders Road Hotel Theme</td>
             <td>Day 9 </p> 12th April</td>
             <td>7:00pm</td>
             <td>Dinner at 王品牛排 台北中山北店 (Wang Prime Steak)
@@ -147,7 +137,6 @@ Add: 台北市中山區中山北路二段33號2樓
 Contact Number: +886 2-2536-1350</td>
         </tr>
                 <tr>
-            <td> Traders Road Hotel Theme</td>
             <td>Day 10 </p> 13th April</td>
             <td>11am - 12:20pm</p>12:20pm-1:20pm</p>6:55pm - 7pm</td>
             <td>Check-out from Accomodation</p>
