--- a/index.html
+++ b/index.html
@@ -41,17 +41,11 @@
             <th class="Remarks-column">Remarks</th>
         </tr>
         <tr>
-            <td>Day 1 </p> 4th April</td>
-            <td>6:20am-7:20am <br> <br> <br> 1:10pm - 2pm <br><br><br> 3.34pm </td>
-            <td>Check-in at Singapore Changi Airport Terminal 3 - Flight No. SQ 876 </p>
-Reach Taiwan/Clear immigration</p>
-Travel to Tainan via HSR (High Speed Rail) <a href="https://en.thsrc.com.tw/">https://en.thsrc.com.tw/</a> 
-Train No. 837  </p>
-Check-in Hotel Cozzi Ximen Tainan
-Add: No.658-2, Sec. 1, Ximen Rd., Tainan City, Tainan, Taiwan, 700
- <a href="https://www.agoda.com/hotel-cozzi-ximen-tainan/hotel/tainan-tw.html"> https://www.agoda.com/hotel-cozzi-ximen-tainan/hotel/tainan-tw.html</a>  </p> 
-Tainan Confucius Temple, Chikan Tower </p>
-Shennong street</td>
+            <td>Day 1 </p> FRIDAY, 5th April</td>
+            <td>7:25pm - 8:00pm <br> <br> <br> 8:00pm - 8:30pm <br><br><br> 8:30pm - ... </td>
+            <td>Dad and Jie landed in YVR</p>
+Otw Home</p>
+Rest at home</p></td>
 <td> 820am Flight Depart <br> <br><br>
 TaoYuan International Airport </p>
 Reservation No: 05664866
