--- a/index.html
+++ b/index.html
@@ -46,11 +46,7 @@
             <td>Dad and Jie landed in YVR</p>
 Otw Home</p>
 Rest at home</p></td>
-<td> 820am Flight Depart <br> <br><br>
-TaoYuan International Airport </p>
-Reservation No: 05664866
- <a href="https://pass.thsrc.com.tw/oatsb2c/order/queryOrder.dol">https://pass.thsrc.com.tw/oatsb2c/order/queryOrder.do <br><br><br><br><br></a>
-Agoda Booking ID: 1168583249 </td>
+<td> EVA Airlines - BR238 to Taiwan and BR010 to YVR (6MN6HC) <br> <br><br></td>
         </tr>
         <tr>
             <td>Day 2 </p> 5th April</td>
