--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             margin-top: 20px;
         }
         th, td {
-            padding: 20px;
+            padding: 10px;
+            width: 100%;
             text-align: left;
             border-bottom: 1px solid #ccc;
             vertical-align: top; /* Align contents to the top */
