--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
         th, td {
             padding: 10px;
-            width: 100%;
+            width: 30%;
             text-align: left;
             border-bottom: 1px solid #ccc;
             vertical-align: top; /* Align contents to the top */
@@ -51,15 +51,15 @@
                 Rest at home</p></td>
             <td> EVA Airlines - BR238 to Taiwan and BR010 to YVR (6MN6HC) <br> <br><br></td>
         </tr>
-        <tr>
-            <td>Day 2 </p> 5th April</td>
-            <td></td>
-            <td>An Ping District <br><br> </p>
-La Belle Maison Cafe <br> <br> </p>
-Tainan Flowers Night Market</td>
-<td> <br> <br> Reservation Made at 2pm
-Contact Number: +886 6 223 5901
-Email: labellemaisoncafe@gmail.com</td>
+         <tr>
+            <td>Day 2 </p> SATURDAY, 6th April</td>
+            <td>6:00am - 10:00am </p> 
+                10:00am - 12:00pm </p>
+                12:00pm - 02:00pm </p></td>
+            <td>Dad and Jie landed in YVR</p>
+                Otw Home</p>
+                Rest at home</p></td>
+            <td> EVA Airlines - BR238 to Taiwan and BR010 to YVR (6MN6HC) <br> <br><br></td>
         </tr>
                 <tr>
             <td>Day 3 </p> 6th April</td>
