--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
         th, td {
             padding: 10px;
-            width: 30%;
+            width: 10%;
             text-align: left;
             border-bottom: 1px solid #ccc;
             vertical-align: top; /* Align contents to the top */
@@ -29,6 +29,9 @@
         }
         .Remarks-column p {
             margin-bottom: 50px; /* Add padding-bottom for spacing within the Description column */
+        }
+        font-color {
+            font-color: #124076;
         }
     </style>
 </head>
@@ -55,10 +58,13 @@
             <td>Day 2 </p> SATURDAY, 6th April</td>
             <td>6:00am - 10:00am </p> 
                 10:00am - 12:00pm </p>
-                12:00pm - 02:00pm </p></td>
-            <td>Dad and Jie landed in YVR</p>
-                Otw Home</p>
-                Rest at home</p></td>
+                12:00pm - 02:00pm </p>
+                14:30pm - 04:30pm </p>
+                04:30pm - 05:30pm </p>
+                05:30pm - 08:00pm </p></td>
+            <td>Wake up + breakfast</p>
+                Chill at Home + Lunch</p>
+                Visit <i><b><font-color>International Buddhist Temple</i></b></font-color></p></td>
             <td> EVA Airlines - BR238 to Taiwan and BR010 to YVR (6MN6HC) <br> <br><br></td>
         </tr>
                 <tr>
