--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
         th, td {
             padding: 10px;
-            width: 10%;
+            width: 5%;
             text-align: left;
             border-bottom: 1px solid #ccc;
             vertical-align: top; /* Align contents to the top */
@@ -48,10 +48,12 @@
             <td>Day 1 </p> FRIDAY, 5th April</td>
             <td>7:25pm - 8:00pm </p> 
                 8:00pm - 8:30pm </p>
-                8:30pm - ... </p></td>
+                8:30pm - ... </p>
+            </td>
             <td>Dad and Jie landed in YVR</p>
                 Otw Home</p>
-                Rest at home</p></td>
+                Rest at home</p>
+            </td>
             <td> EVA Airlines - BR238 to Taiwan and BR010 to YVR (6MN6HC) <br> <br><br></td>
         </tr>
          <tr>
@@ -61,10 +63,15 @@
                 12:00pm - 02:00pm </p>
                 14:30pm - 04:30pm </p>
                 04:30pm - 05:30pm </p>
-                05:30pm - 08:00pm </p></td>
+                05:30pm - 08:00pm </p>
+            </td>
             <td>Wake up + breakfast</p>
                 Chill at Home + Lunch</p>
-                Visit <i><b><font-color>International Buddhist Temple</i></b></font-color></p></td>
+                Visit <i><b><font-color>International Buddhist Temples</i></b></font-color></p>
+                Head to <i><b><font-color>Queen Elizabeth Park</i></b></font-color> to take a walk</p>
+                Can walk at <i><b><font-color>Oakridge Park Mall</i></b></font-color></p>
+                Dinner at <i><b><font-color>Ribs and Chicken Marpole</i></b></font-color></p>
+            </td>
             <td> EVA Airlines - BR238 to Taiwan and BR010 to YVR (6MN6HC) <br> <br><br></td>
         </tr>
                 <tr>
