--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
         th, td {
             padding: 10px;
-            width: 5%;
+            width: 2%;
             text-align: left;
             border-bottom: 1px solid #ccc;
             vertical-align: top; /* Align contents to the top */
@@ -30,7 +30,7 @@
         .Remarks-column p {
             margin-bottom: 50px; /* Add padding-bottom for spacing within the Description column */
         }
-        font-color {
+        myfont-color {
             font-color: #124076;
         }
     </style>
@@ -67,7 +67,7 @@
             </td>
             <td>Wake up + breakfast</p>
                 Chill at Home + Lunch</p>
-                Visit <i><b><font-color>International Buddhist Temples</i></b></font-color></p>
+                Visit <i><b><myfont-color>International Buddhist Temples</i></b></myfont-color></p>
                 Head to <i><b><font-color>Queen Elizabeth Park</i></b></font-color> to take a walk</p>
                 Can walk at <i><b><font-color>Oakridge Park Mall</i></b></font-color></p>
                 Dinner at <i><b><font-color>Ribs and Chicken Marpole</i></b></font-color></p>
