--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         th {
             background-color: #FDCEDF;
         }
+        mycolor {
+            font-color: #124076;
+        }
         .Remarks-column p {
             margin-bottom: 50px; /* Add padding-bottom for spacing within the Description column */
-        }
-        font-color {
-            font-color: #124076;
         }
     </style>
 </head>
@@ -67,10 +67,10 @@
             </td>
             <td>Wake up + breakfast</p>
                 Chill at Home + Lunch</p>
-                Visit <i><b><font-color>International Buddhist Temples</i></b></font-color></p>
-                Head to <i><b><font-color: #124076>Queen Elizabeth Park</i></b></font-color> to take a walk</p>
-                Can walk at <i><b><font-color>Oakridge Park Mall</i></b></font-color></p>
-                Dinner at <i><b><font-color>Ribs and Chicken Marpole</i></b></font-color></p>
+                Visit <i><b><mycolor>International Buddhist Temples</i></b></mycolor></p>
+                Head to <mycolor><i><b>Queen Elizabeth Park</i></b></mycolor> to take a walk</p>
+                Can walk at <i><b><mycolor>Oakridge Park Mall</i></b></mycolor></p>
+                Dinner at <i><b><mycolor>Ribs and Chicken Marpole</i></b></mycolor></p>
             </td>
             <td> EVA Airlines - BR238 to Taiwan and BR010 to YVR (6MN6HC) <br> <br><br></td>
         </tr>
