--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
                 Can walk at <i><b><mycolor>Oakridge Park Mall</i></b></mycolor></p>
                 Dinner at <i><b><mycolor>Ribs and Chicken Marpole</i></b></mycolor></p>
             </td>
-            <td> EVA Airlines - BR238 to Taiwan and BR010 to YVR (6MN6HC) <br> <br><br></td>
+            <td> </p>
+                 </p>
+                 </p>
+                 </p>
+                EVA Airlines - BR238 to Taiwan and BR010 to YVR (6MN6HC) <br> <br><br></p></td>
         </tr>
                 <tr>
             <td>Day 3 </p> 6th April</td>
