--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                  </p>
                  </p>
                  </p>
-                EVA Airlines - BR238 to Taiwan and BR010 to YVR (6MN6HC) <br> <br><br></p></td>
+                There are shops/food court etc, can chill at cafe <br> <br><br></p></td>
         </tr>
                 <tr>
             <td>Day 3 </p> 6th April</td>
