--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             background-color: #FDCEDF;
         }
         mycolor {
-            font-color: #124076;
+            color: #124076;
         }
         .Remarks-column p {
             margin-bottom: 50px; /* Add padding-bottom for spacing within the Description column */
