--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
             </td>
             <td>Wake up + breakfast</p>
                 Chill at Home + Lunch</p>
-                Visit <i><b><mycolor>International Buddhist Temples</i></b></mycolor></p>
+                Visit <mycolor><i><b>International Buddhist Temples</i></b></mycolor></p>
                 Head to <mycolor><i><b>Queen Elizabeth Park</i></b></mycolor> to take a walk</p>
-                Can walk at <i><b><mycolor>Oakridge Park Mall</i></b></mycolor></p>
-                Dinner at <i><b><mycolor>Ribs and Chicken Marpole</i></b></mycolor></p>
+                Can walk at <mycolor><i><b>Oakridge Park Mall</i></b></mycolor></p>
+                Dinner at <mycolor><i><b>Ribs and Chicken Marpole</i></b></mycolor></p>
             </td>
             <td> </p>
                  </p>
