--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </td>
             <td> EVA Airlines - BR238 to Taiwan and BR010 to YVR (6MN6HC) <br> <br><br></td>
         </tr>
-         <tr>
+        <tr>
             <td>Day 2 </p> SATURDAY, 6th April</td>
             <td>6:00am - 10:00am </p> 
                 10:00am - 12:00pm </p>
@@ -76,20 +76,23 @@
                  </p>
                  </p>
                  </p>
-                There are shops/food court etc, can chill at cafe <br> <br><br></p></td>
+                There are shops/food court etc, can chill at cafe <br> <br><br></p>
+            </td>
         </tr>
-                <tr>
-            <td>Day 3 </p> 6th April</td>
-            <td>9:30am<br><br><br>11:13am</td>
-            <td>Check-out from Hotel Cozzi Ximen Tainan </p> Travel to Taichung via HSR (High Speed Rail).https://en.thsrc.com.tw/
-Train No. 630 </p>
-Check in SOF Taichung 植光花園酒店
-Add:  No. 52號, Guangfu Rd, Central District, Taichung City, Taiwan 400
-  <a href="https://www.sofhotel.com.tw/tw/index.html"> https://www.sofhotel.com.tw/tw/index.html</a></p>
-審計新村</p> 中央公園 </p> 秋紅谷 台中歌劇院 </p> 逢甲夜市  </td>
-            <td><b>"Reservation No: 02012728
- <a href="https://pass.thsrc.com.tw/oatsb2c/order/queryOrder.do"> https://pass.thsrc.com.tw/oatsb2c/order/queryOrder.do</a>
-</td>
+        <tr>
+            <td>Day 3 </p> SUNDAY, 7th April</td>
+            <td>6:00am - 10:00am </p> 
+                10:00am - 12:00pm </p>
+                12:00pm - 01:00pm </p>
+                01:00pm - 04:00pm </p>
+                04:00pm - 05:00pm </p>
+            </td>
+            <td>Wake up + breakfast</p>
+                Visit <mycolor><i><b>Ling Yen Mountain Temple</i></b></mycolor></p>
+                Lunch at <mycolor><i><b>Richmond Public Market</i></b></mycolor></p>
+                Head to <mycolor><i><b>Garry Point Park Steveston</i></b></mycolor></p>
+                Head back home and dinner</p>
+            </td>
         </tr>
         
                <tr>
