--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 Can walk at <mycolor><i><b>Oakridge Park Mall</i></b></mycolor></p>
                 Dinner at <mycolor><i><b>Ribs and Chicken Marpole</i></b></mycolor></p>
             </td>
-            <td> <br><br><br><br>
+            <td> <br><br><br><br><br><br>
                  There are shops/food court etc, can chill at cafe <br></p>
             </td>
         </tr>
@@ -95,16 +95,25 @@
         <tr>
             <td>Day 4 </p> MONDAY, 8th April</td>
             <td>6:00am - 10:00am </p> 
-                10:00am - 12:00pm </p>
-                12:00pm - 01:00pm </p>
+                10:00am - 11:00am </p>
+                11:00am - 02:00pm </p>
+                02:00pm - 03:30pm </p>
+                03:30pm - 05:00pm </p><br>
+                6:00am - 10:00am </p> 
+                10:00am - 01:00pm </p>
                 01:00pm - 04:00pm </p>
-                04:00pm - 05:00pm </p>
+                04:00pm - 04:30pm </p>
             </td>
             <td>Wake up + breakfast</p>
-                Visit <mycolor><i><b>Ling Yen Mountain Temple</i></b></mycolor></p>
-                Lunch at <mycolor><i><b>Richmond Public Market</i></b></mycolor></p>
-                Head to <mycolor><i><b>Garry Point Park Steveston</i></b></mycolor></p>
-                Head back home and dinner</p>
+                Take train to <mycolor><i><b>Richmond Brighouse</i></b></mycolor></p>
+                Walk around <mycolor><i><b>CF Richmond</i></b></mycolor> and have lunch there</p>
+                Can go to <mycolor><i><b>Lansdowne</i></b></mycolor> to walk / tea break</p>
+                Head back home and dinner</p><br>
+                <color: #E72929> OR </color: #E72929> </p>
+                Wake up + breakfast</p>
+                Chill at Home + Lunch</p>
+                Walk to <mycolor><i><b>Foody World and around</i></b></mycolor></p>
+                Head back home and dinner</p><br>
             </td>
         </tr>
         
