--- a/index.html
+++ b/index.html
@@ -72,8 +72,11 @@
                 Can walk at <mycolor><i><b>Oakridge Park Mall</i></b></mycolor></p>
                 Dinner at <mycolor><i><b>Ribs and Chicken Marpole</i></b></mycolor></p>
             </td>
-            <td> <br><br><br><br><br><br>
-                 There are shops/food court etc, can chill at cafe <br></p>
+            <td> </p>
+                 </p>
+                 </p>
+                 </p>
+                 There are shops/food court etc, can chill at cafe</p>
             </td>
         </tr>
         <tr>
