--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         mycolor {
             color: #124076;
         }
+         mycolor2 {
+            color: #E72929;
+        }
         .Remarks-column p {
             margin-bottom: 50px; /* Add padding-bottom for spacing within the Description column */
         }
@@ -111,8 +114,8 @@
                 Take train to <mycolor><i><b>Richmond Brighouse</i></b></mycolor></p>
                 Walk around <mycolor><i><b>CF Richmond</i></b></mycolor> and have lunch there</p>
                 Can go to <mycolor><i><b>Lansdowne</i></b></mycolor> to walk / tea break</p>
-                Head back home and dinner</p><br>
-                <color: #E72929> OR </color: #E72929> </p>
+                Head back home and dinner</p>
+                <mycolor2><b>OR</b></mycolor2></p>
                 Wake up + breakfast</p>
                 Chill at Home + Lunch</p>
                 Walk to <mycolor><i><b>Foody World and around</i></b></mycolor></p>
