--- a/index.html
+++ b/index.html
@@ -75,11 +75,9 @@
                 Can walk at <mycolor><i><b>Oakridge Park Mall</i></b></mycolor></p>
                 Dinner at <mycolor><i><b>Ribs and Chicken Marpole</i></b></mycolor></p>
             </td>
-            <td> </p>
-                 </p>
-                 </p>
-                 </p>
-                 There are shops/food court etc, can chill at cafe</p>
+            <td> </p><br>
+                 </p><br>
+                 <br>There are shops/food court etc, can chill at cafe</p>
             </td>
         </tr>
         <tr>
@@ -105,7 +103,7 @@
                 11:00am - 02:00pm </p>
                 02:00pm - 03:30pm </p>
                 03:30pm - 05:00pm </p><br>
-                6:00am - 10:00am </p> 
+                <br>6:00am - 10:00am </p> 
                 10:00am - 01:00pm </p>
                 01:00pm - 04:00pm </p>
                 04:00pm - 04:30pm </p>
@@ -126,31 +124,35 @@
         <tr>
             <td>Day 5 </p> TUESDAY, 9th April</td>
             <td>6:00am - 10:00am </p> 
-                10:00am - 12:00pm </p>
-                12:00pm - 01:00pm </p>
-                01:00pm - 04:00pm </p>
+                10:00am - 01:30pm </p>
+                01:30pm - 03:00pm </p>
+                03:00pm - 04:00pm </p>
                 04:00pm - 05:00pm </p>
+                05:00pm - 05:30pm </p>
+                05:30pm - 06:00pm </p>
+                06:00pm - 06:30pm </p>
+                06:30pm - 08:00pm </p>
+                08:00pm - 09:00pm </p>
             </td>
             <td>Wake up + breakfast</p>
-                Visit <mycolor><i><b>Ling Yen Mountain Temple</i></b></mycolor></p>
-                Lunch at <mycolor><i><b>Richmond Public Market</i></b></mycolor></p>
-                Head to <mycolor><i><b>Garry Point Park Steveston</i></b></mycolor></p>
+                Chill at Home + Lunch</p>
+                Take train to <mycolor><i><b>Vancouver City Centre</i></b></mycolor></p>
+                Walk around <mycolor><i><b>CF Pacific Centre</i></b></mycolor></p>
+                Chill at <mycolor><i><b>Tim Hortons</i></b></mycolor> nearby</p>
+                Can explore and take picture at <mycolor><i><b>Vancouver Art Gallery</i></b></mycolor></p>
+                Meet Yonas at <mycolor><i><b>VCC station</i></b></mycolor></p>
+                Can walk to <mycolor><i><b>Banana Leaf</i></b></mycolor> for dinner</p>
+                Dinner</p>
                 Head back home and dinner</p>
             </td>
         </tr>
        <tr>
             <td>Day 6 </p> WEDNESDAY, 10th April</td>
-            <td>6:00am - 10:00am </p> 
-                10:00am - 12:00pm </p>
-                12:00pm - 01:00pm </p>
-                01:00pm - 04:00pm </p>
-                04:00pm - 05:00pm </p>
+            <td>6:00am - 10:00am </p>
             </td>
             <td>Wake up + breakfast</p>
-                Visit <mycolor><i><b>Ling Yen Mountain Temple</i></b></mycolor></p>
-                Lunch at <mycolor><i><b>Richmond Public Market</i></b></mycolor></p>
-                Head to <mycolor><i><b>Garry Point Park Steveston</i></b></mycolor></p>
-                Head back home and dinner</p>
+                Chill at home + Lunch</p>
+                Can explore the park downstairs, BK, Sbux, etc</p>
             </td>
         </tr>
         
