--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
             </td>
             <td> </p><br>
                  </p><br>
+                 </p><br>
+                 </p><br>
                  <br>There are shops/food court etc, can chill at cafe</p>
             </td>
         </tr>
@@ -148,7 +150,7 @@
         </tr>
        <tr>
             <td>Day 6 </p> WEDNESDAY, 10th April</td>
-            <td>6:00am - 10:00am </p>
+            <td>06:00am - 10:00am </p>
             </td>
             <td>Wake up + breakfast</p>
                 Chill at home + Lunch</p>
@@ -156,11 +158,23 @@
             </td>
         </tr>
         
-                <tr>
-            <td>Day 7 </p> 10th April</td>
-            <td></td>
-            <td></td>
-            <td>  </td>
+        <tr>
+            <td>Day 7 </p> THURSDAY, 11th April</td>
+            <td>6:00am - 10:00am </p>
+                10:00am - 04:00pm </p>
+                04:00pm - 08:00pm </p>
+                08:00pm - ... </p>
+            </td>
+            <td>Wake up + breakfast</p>
+                Chill at home + Lunch</p>
+                Go to <mycolor><i><b>Mc Arthur FO</i></b></mycolor> and dinner there</p>
+                Head back home and rest</p>
+            </td>
+            <td>
+                </p>
+                </p>
+                Meet Yonas there</p>
+            </td>
         </tr>
         
                 <tr>
