--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                  </p><br>
                  </p><br>
                  </p><br>
-                 <br>There are shops/food court etc, can chill at cafe</p>
+                 There are shops/food court etc, can chill at cafe</p>
             </td>
         </tr>
         <tr>
