--- a/index.html
+++ b/index.html
@@ -177,13 +177,35 @@
             </td>
         </tr>
         
-                <tr>
-            <td>Day 8 </p> 11th April</td>
-            <td></td>
-            <td>Bitou Cape Park </p> Jiufen</td>
-            <td></td>
+        <tr>
+            <td>Day 8 </p> FRIDAY, 12th April</td>
+            <td>6:00am - 10:00am </p>
+                10:00am - 11:00am </p>
+                11:00am - 12:30pm </p>
+                12:30pm - 01:30pm </p>
+                01:30pm - 03:00pm </p>
+                03:00pm - 04:00pm </p>
+                04:00pm - 06:30pm </p>
+                06:30pm - 07:00pm </p>
+            </td>
+            <td>Wake up + breakfast</p>
+                Chill at home + Lunch</p>
+                Take train to <mycolor><i><b>Yaletown Round House</i></b></mycolor> and bus towards <mycolor><i><b>English Bay beach</i></b></mycolor></p>
+                Walk towards <mycolor><i><b>Stanley Park</i></b></mycolor> playground</p>
+                Lunch at <mycolor><i><b>Chicken World Canada</i></b></mycolor> (Fast Food)</p>
+                Walk along seawall towards Sunset Beach</p>
+                Head to <mycolor><i><b>Costco</i></b></mycolor></p>
+                Explore and have dinner there or home</p>
+                Head back home and rest</p>
+            </td>
+            <td>
+                </p>
+                Starting point will be near Cactus Club Cafe</p>
+                Don't need to walk all the way, can just walk till tired and head back to starting point</p>
+            </td>
         </tr>
-                <tr>
+        
+        <tr>
             <td>Day 9 </p> 12th April</td>
             <td>7:00pm</td>
             <td>Dinner at 王品牛排 台北中山北店 (Wang Prime Steak)
