--- a/index.html
+++ b/index.html
@@ -205,24 +205,48 @@
             </td>
         </tr>
         
-        <tr>
-            <td>Day 9 </p> 12th April</td>
-            <td>7:00pm</td>
-            <td>Dinner at 王品牛排 台北中山北店 (Wang Prime Steak)
-Add: 台北市中山區中山北路二段33號2樓
-<a href="https://inline.app/booking/-MaSqx3P-coHdoIMveEZ:inline-live-2?language=zh-tw"> https://inline.app/booking/-MaSqx3P-coHdoIMveEZ:inline-live-2?language=zh-tw</a></td>
-            <td>Reservation made at 7.40pm 
-Contact Number: +886 2-2536-1350</td>
+         <tr>
+            <td>Day 9 </p> SATURDAY, 13th April</td>
+            <td>6:00am - 10:00am </p>
+                10:00am - 02:00pm </p>
+                02:00pm - 04:30pm </p>
+                04:30pm - 05:30pm </p>
+                05:30pm - 06:00pm </p>
+                06:00pm - ... </p>
+            </td>
+            <td>Wake up + breakfast</p>
+                Go to <mycolor><i><b>Granville Island</i></b></mycolor> and lunch there</p>
+                Head to <mycolor><i><b>Gastown Steam Clock</i></b></mycolor> and walk around souvenir shops</p>
+                Go back apartment to get car and go to <mycolor><i><b>Lansdowne</i></b></mycolor> to collect Jie's cake</p>
+                Head back home and rest</p>
+            </td>
+            <td>
+                </p><br>
+                </p><br>
+                Maxim's</p>
+            </td>
         </tr>
-                <tr>
-            <td>Day 10 </p> 13th April</td>
-            <td>11am - 12:20pm</p>12:20pm-1:20pm</p>6:55pm - 7pm</td>
-            <td>Check-out from Accomodation</p>
-Check In at Taoyuan International Airport Terminal 2 - Flight No. SQ 877 </p>
-Reach SG</td>
-            <td> Depart to TaoYuan Airport </p>
-Flight Depart at 2:20pm </p>
-Back to reality 做工吧 </td>
+        
+        <tr>
+            <td>Day 10 </p> SUNDAY, 14th April</td>
+            <td>6:00am - 10:00am </p>
+                10:00am - 10:30pm </p>
+                10:30pm - 03:00pm </p>
+                03:00pm - 05:00pm </p>
+                05:00pm - 07:30pm </p>
+                07:30pm - ... </p>
+            </td>
+            <td>Wake up + breakfast + celebrate Jie's birthday</p>
+                Go to <mycolor><i><b>Granville Island</i></b></mycolor> and lunch there</p>
+                Head to <mycolor><i><b>Gastown Steam Clock</i></b></mycolor> and walk around souvenir shops</p>
+                Go back apartment to get car and go to <mycolor><i><b>Lansdowne</i></b></mycolor> to collect Jie's cake</p>
+                Head back home and rest</p>
+            </td>
+            <td>
+                </p><br>
+                </p><br>
+                Maxim's</p>
+            </td>
         </tr>
 
         <!-- Add more rows as needed -->
