--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 07:30pm - ... </p>
             </td>
             <td>Wake up + breakfast + celebrate Jie's birthday</p>
-                Go to <mycolor><i><b>Granville Island</i></b></mycolor> and lunch there</p>
+                Go to <mycolor><i><b>Van Dusen Garden</i></b></mycolor></p>
                 Head to <mycolor><i><b>Gastown Steam Clock</i></b></mycolor> and walk around souvenir shops</p>
                 Go back apartment to get car and go to <mycolor><i><b>Lansdowne</i></b></mycolor> to collect Jie's cake</p>
                 Head back home and rest</p>
