--- a/index.html
+++ b/index.html
@@ -238,17 +238,35 @@
             </td>
             <td>Wake up + breakfast + celebrate Jie's birthday</p>
                 Go to <mycolor><i><b>Van Dusen Garden</i></b></mycolor></p>
-                Head to <mycolor><i><b>Gastown Steam Clock</i></b></mycolor> and walk around souvenir shops</p>
-                Go back apartment to get car and go to <mycolor><i><b>Lansdowne</i></b></mycolor> to collect Jie's cake</p>
+                Explore <mycolor><i><b>Van Dusen Garden</i></b></mycolor> and lunch there</p>
                 Head back home and rest</p>
+                Going out for dinner at <mycolor><i><b>China Food in Lansdowne</i></b></mycolor></p>
             </td>
             <td>
                 </p><br>
                 </p><br>
-                Maxim's</p>
+                </p><br>
+                <br>Need to reserve first ?</p>
             </td>
         </tr>
 
+        <tr>
+            <td>Day 11 </p> MONDAY, 15th April</td>
+            <td>06:00am - 10:00am </p></td>
+            <td>wake up + breakfast</p>
+                Chill at Home</p>
+            </td>
+        </tr>
+
+         <tr>
+            <td>Day 12 </p> TUESDAY, 16th April</td>
+            <td>06:00am - 10:00am </p></td>
+            <td>wake up + breakfast</p>
+                Chill at Home</p>
+                Collect cake at <mycolor><i><b>Maxim's Lansdowne</i></b></mycolor></p>
+            </td>
+        </tr>
+        
         <!-- Add more rows as needed -->
     </table>
 </body>
