--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
         th, td {
             padding: 10px;
-            width: 1%;
+            /*width: 1%;*/
             text-align: left;
             border-bottom: 1px solid #ccc;
             vertical-align: top; /* Align contents to the top */
@@ -49,9 +49,9 @@
         </tr>
         <tr>
             <td>Day 1 </p> FRIDAY, 5th April</td>
-            <td>7:25pm - 8:00pm </p> 
-                8:00pm - 8:30pm </p>
-                8:30pm - ... </p>
+            <td>7:25-8pm </p> 
+                8-8:30pm </p>
+                8:30pm-... </p>
             </td>
             <td>Dad and Jie landed in YVR</p>
                 Otw Home</p>
@@ -61,12 +61,12 @@
         </tr>
         <tr>
             <td>Day 2 </p> SATURDAY, 6th April</td>
-            <td>6:00am - 10:00am </p> 
-                10:00am - 12:00pm </p>
-                12:00pm - 02:00pm </p>
-                14:30pm - 04:30pm </p>
-                04:30pm - 05:30pm </p>
-                05:30pm - 08:00pm </p>
+            <td>6am - 10:00am </p> 
+                10-12pm </p>
+                12-2pm </p>
+                2:30-4:30pm </p>
+                4:30-5:30pm </p>
+                5:30-8pm </p>
             </td>
             <td>Wake up + breakfast</p>
                 Chill at Home + Lunch</p>
