--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             <td>6-10am </p> 
                 10-12pm </p>
                 12-2pm </p>
-                2:30-4:30pm </p>
-                4:30-5:30pm </p>
-                5:30-8pm </p>
+                2-4:30pm </p>
+                4:30-6pm </p>
+                6-8pm </p>
             </td>
             <td>Wake up + breakfast</p>
                 Chill at Home + Lunch</p>
@@ -91,9 +91,9 @@
                 4-5pm </p>
             </td>
             <td>Wake up + breakfast</p>
-                Visit <mycolor><i><b>Ling Yen Mountain Temple</i></b></mycolor></p>
-                Lunch at <mycolor><i><b>Richmond Public Market</i></b></mycolor></p>
-                Head to <mycolor><i><b>Garry Point Park Steveston</i></b></mycolor></p>
+                Visit <mycolor><i><b>Ling Yen Temple</i></b></mycolor></p>
+                Lunch at <mycolor><i><b>Rmd Public Market</i></b></mycolor></p>
+                Head to <mycolor><i><b>Garry Point Park</i></b></mycolor></p>
                 Head back home and dinner</p>
             </td>
         </tr>
@@ -102,9 +102,9 @@
             <td>Day 4 </p> MONDAY, 8th April</td>
             <td>6-10am </p> 
                 10-11am </p>
-                11-2pm </p>
-                2-3:30pm </p>
-                3:30-5pm </p><br>
+                <br>11-2pm </p>
+                <br>2-3:30pm </p>
+                <br>3:30-5pm </p><br>
                 <br>6-10am </p> 
                 10-1pm </p>
                 1-4pm </p>
@@ -150,7 +150,7 @@
         </tr>
        <tr>
             <td>Day 6 </p> WEDNESDAY, 10th April</td>
-            <td>06:00am - 10:00am </p>
+            <td>6-10am </p>
             </td>
             <td>Wake up + breakfast</p>
                 Chill at home + Lunch</p>
@@ -160,10 +160,10 @@
         
         <tr>
             <td>Day 7 </p> THURSDAY, 11th April</td>
-            <td>6:00am - 10:00am </p>
-                10:00am - 04:00pm </p>
-                04:00pm - 08:00pm </p>
-                08:00pm - ... </p>
+            <td>6-10am </p>
+                10-4pm </p>
+                4-8pm </p>
+                8pm-... </p>
             </td>
             <td>Wake up + breakfast</p>
                 Chill at home + Lunch</p>
@@ -179,14 +179,14 @@
         
         <tr>
             <td>Day 8 </p> FRIDAY, 12th April</td>
-            <td>6:00am - 10:00am </p>
-                10:00am - 11:00am </p>
-                11:00am - 12:30pm </p>
-                12:30pm - 01:30pm </p>
-                01:30pm - 03:00pm </p>
-                03:00pm - 04:00pm </p>
-                04:00pm - 06:30pm </p>
-                06:30pm - 07:00pm </p>
+            <td>6-10am </p>
+                10-11am </p>
+                11-12:30pm </p>
+                12:30-1:30pm </p>
+                1:30-3pm </p>
+                3-4pm </p>
+                4-6:30pm </p>
+                6:30-7pm </p>
             </td>
             <td>Wake up + breakfast</p>
                 Chill at home + Lunch</p>
