--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
             <td>6-10am </p> 
                 10-1:30pm </p>
                 1:30-3pm </p>
-                3-4pm </p>
-                4-5pm </p>
+                <br>3-4pm </p>
+                <br>4-5pm </p>
                 5-5:30pm </p>
                 <br>5:30-6pm </p>
-                6-6:30pm </p>
-                6:30-8pm </p>
-                <br>8-9pm </p>
+                <br><br>6-6:30pm </p>
+                <br>6:30-8pm </p>
+                <br><br><br>8-9pm </p>
             </td>
             <td>Wake up + breakfast</p>
                 Chill at Home + Lunch</p>
@@ -182,11 +182,11 @@
             <td>6-10am </p>
                 10-11am </p>
                 11-12:30pm </p>
-                <br>12:30-1:30pm </p>
+                <br><br>12:30-1:30pm </p>
                 <br>1:30-3pm </p>
-                <br>3-4pm </p>
-                <br>4-6:30pm </p>
-                <br>6:30-7pm </p>
+                <br><br>3-4pm </p>
+                <br><br>4-6:30pm </p>
+                <br><br><br>6:30-7pm </p>
             </td>
             <td>Wake up + breakfast</p>
                 Chill at home + Lunch</p>
@@ -211,8 +211,8 @@
                 <br>10-2pm </p>
                 <br>2-4:30pm </p>
                 <br>4:30-5:30pm </p>
-                <br>5:30-6pm </p>
-                6-... </p>
+                <br><br>5:30-6pm </p>
+                <br>6-... </p>
             </td>
             <td>Wake up + breakfast</p>
                 Go to <mycolor><i><b>Granville Island</i></b></mycolor> and lunch there</p>
@@ -230,11 +230,10 @@
         <tr>
             <td>Day 10 </p> SUNDAY, 14th April</td>
             <td>6-10am </p>
-                10-10:30am </p>
+                <br>10-10:30am </p>
                 <br>10:30-3pm </p>
-                3-5pm </p>
-                <br>5-7:30pm </p>
-                7:30pm-... </p>
+                <br><br>3-5pm </p>
+                <br><br><br>5-7:30pm </p>
             </td>
             <td>Wake up + breakfast + celebrate Jie's birthday</p>
                 Go to <mycolor><i><b>Van Dusen Garden</i></b></mycolor></p>
@@ -291,14 +290,14 @@
             <td>Day 14 </p> THURSDAY, 18th April</td>
             <td>5-8:30am </p>
                 8:30-9am </p>
-                10:30-1pm </p>
-                1:30-2:30pm </p>
-                2:30-4pm-... </p>
-                <br>4-5pm-... </p>
+                <br><br>10:30-1pm </p>
+                <br>1:30-2:30pm </p>
+                <br>2:30-4pm-... </p>
+                4-5pm-... </p>
                 5pm-... </p>
             </td>
             <td>wake up + breakfast</p>
-                Heading to YVR airport by uber
+                Heading to YVR airport by uber </p>
                 Travel to Calgary YYC</p>
                 Find food nearby airporT?</p>
                 Heading to Airbnb and check-in if possible </p>
@@ -321,10 +320,10 @@
             <td>5-7:30am </p>
                 7:30-8am </p>
                 8-8:30am </p>
-                8:30am-... </p>
+                <br>8:30am-... </p>
             </td>
             <td>wake up + prep</p>
-                Breakfast at home or at ? </p>
+                Breakfast at home or ?</p>
                 Heading to pickup point at <mycolor><i><b>Sunterra Market</i></b></mycolor></p>
                 Tour to Glaciers, Lakes, Mountains, Banff & Canmore - VIP Comfort </p>
                 Drop off point at <mycolor><i><b>Sunterra Market</i></b></mycolor> and have dinner at ??</p>
