--- a/index.html
+++ b/index.html
@@ -334,6 +334,145 @@
                 Sunterra Market, Keynote, 200 12 Ave SE, Calgary, AB T2G 0Z7 </p>
             </td>
         </tr>
+
+        <tr>
+            <td>Day 16 </p> SATURDAY, 20th April</td>
+            <td>5-7:30am </p>
+                7:30-8am </p>
+                <br>8-8:45am </p>
+                8:45-9:30am </p>
+                9:30-10am </p>
+                10-12pm </p>
+                12-1pm </p>
+                1-4pm </p>
+                4-6pm </p>
+                6-6:30pm </p>
+                <br>6:30-8pm </p>
+                8-9pm </p>
+                <br>9pm-...</p>
+            </td>
+            <td>wake up + prep</p>
+                Walk to <mycolor><i><b>Red's Diner on 4th</i></b></mycolor> for breakfast</p>
+                Have breakfast</p>
+                Take a stroll at <mycolor><i><b>Central Memorial Park</i></b></mycolor></p>
+                Take Uber to <mycolor><i><b>Croisiron Mills</i></b></mycolor></p>
+                Shopping </p>
+                Lunch </p>
+                Continue Shopping </p>
+                Cab back to apartment and rest </p>
+                Walk to <mycolor><i><b>Rose Garden Thai</i></b></mycolor> restaurant</p>
+                Dinner </p>
+                Chill walk experience their night life </p>
+                Home and rest </p>
+            </td>
+            <td>
+                <br></p>
+                <br></p>
+                Sunterra Market, Keynote, 200 12 Ave SE, Calgary, AB T2G 0Z7 </p>
+            </td>
+        </tr>
+
+        <tr>
+            <td>Day 17 </p> SUNDAY, 21st April</td>
+            <td>6-8am </p>
+                8-9am </p>
+                <br>9-10am </p>
+                <br>10-11am </p>
+                <br><br><br>
+                <br>2-3pm </p>
+                <br>3pm-... </p>
+            </td>
+            <td>wake up + prep</p>
+                Breakfast at <mycolor><i><b>Rosso Coffee Roasters</i></b></mycolor></p>
+                Head back apartment, pack up and check-out</p>
+                Head to <mycolor><i><b>TD Square Shopping Mall</i></b></mycolor> </p>
+                Brunch buffet at <mycolor><i><b>Yellow Door Bistro</i></b></mycolor> </p>
+                Heading to Airport </p>
+                Chill and wait at YYC airport</p>
+                Travel back to Vancouver </p>
+            </td>
+            <td>
+                <br></p>
+                <br></p>
+                check out time is at 10am ? </p>
+                Mall opens at 10AM </p>
+                or just eat at TD Square Mall </p>
+                <br></p>
+                <br></p>
+                by Westjet WS 119 </p>
+            </td>
+        </tr>
+
+        <tr>
+            <td>Day 18 </p> MONDAY, 22nd April</td>
+            <td>6-10am </p>
+                10-1pm </p>
+                1-4pm </p>
+                <br><br>4-6pm </p>
+                <br>6-7pm </p>
+                7-8:30pm </p>
+                <br>8:30-9pm </p>
+            </td>
+            <td>wake up + prep</p>
+                Chill at home + lunch</p>
+                Goto <mycolor><i><b>dr Sun Yat Sen / International Village Mall</i></b></mycolor></p>
+                Goto <mycolor><i><b>Waterfront st</i></b></mycolor> and take waterboat to <mycolor><i><b>Lonsdale Quay</i></b></mycolor></p>
+                Dinner Vietnam Food
+                Explore <mycolor><i><b>Lonsdale Quay Market / Waterfront Park</i></b></mycolor></p>
+                Head back home and rest </p>
+            </td>
+            <td>
+                <br></p>
+                <br></p>
+                <br></p>
+                <br></p>
+                Dex Burger Bar & Vinam Vietnamese Cuisine </p>
+                sunset at ard 7:51pm </p>
+            </td>
+        </tr>
+
+        <tr>
+            <td>Day 19 </p> TUESDAY, 23rd April</td>
+            <td>6-... </p>
+            </td>
+            <td>wake up + breakfast</p>
+                Chill at home</p>
+            </td>
+            <td>
+                <br></p>
+                Yonas is working </p>
+            </td>
+        </tr>
+
+        <tr>
+            <td>Day 20 </p> WEDNESDAY, 24th April</td>
+            <td>6-10am </p>
+                10-9pm </p>
+            </td>
+            <td>wake up + breakfast</p>
+                flexible</p>
+            </td>
+        </tr>
+
+        <tr>
+            <td>Day 21 </p> THURSDAY, 25th April</td>
+            <td>6-9am </p>
+                9-9:30am </p>
+                9:30-10am </p>
+                11:45am... </p>
+            </td>
+            <td>wake up + breakfast</p>
+                prepare and packing</p>
+                otw to YVR airport </p>
+                flight to YVR-HKG-JKT </p>
+            </td>
+            <td>
+                <br></p>
+                <br></p>
+                AC007 - 467EYL </p>
+                CX797 - 467EYL </p>
+            </td>
+        </tr>
         <!-- Add more rows as needed -->
     </table>
 </body>
