--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
                 1:30-3pm </p>
                 <br>3-4pm </p>
                 <br>4-5pm </p>
-                5-5:30pm </p>
-                <br>5:30-6pm </p>
+                <br>5-5:30pm </p>
+                <br><br>5:30-6pm </p>
                 <br><br>6-6:30pm </p>
                 <br>6:30-8pm </p>
-                <br><br><br>8-9pm </p>
+                <br><br>8-9pm </p>
             </td>
             <td>Wake up + breakfast</p>
                 Chill at Home + Lunch</p>
@@ -185,8 +185,8 @@
                 <br><br>12:30-1:30pm </p>
                 <br>1:30-3pm </p>
                 <br><br>3-4pm </p>
-                <br><br>4-6:30pm </p>
-                <br><br><br>6:30-7pm </p>
+                4-6:30pm </p>
+                <br><br>6:30-7pm </p>
             </td>
             <td>Wake up + breakfast</p>
                 Chill at home + Lunch</p>
@@ -194,8 +194,7 @@
                 Walk towards <mycolor><i><b>Stanley Park</i></b></mycolor> playground</p>
                 Lunch at <mycolor><i><b>Chicken World Canada</i></b></mycolor> (Fast Food)</p>
                 Walk along seawall towards Sunset Beach</p>
-                Head to <mycolor><i><b>Costco</i></b></mycolor></p>
-                Explore and have dinner there or home</p>
+                Head to <mycolor><i><b>Costco</i></b></mycolor> explore and have dinner there or home</p>
                 Head back home and rest</p>
             </td>
             <td>
@@ -210,9 +209,8 @@
             <td>6-10am </p>
                 <br>10-2pm </p>
                 <br>2-4:30pm </p>
-                <br>4:30-5:30pm </p>
-                <br><br>5:30-6pm </p>
-                <br>6-... </p>
+                <br>4:30-6pm </p>
+                <br><br>6-6:30pm </p>
             </td>
             <td>Wake up + breakfast</p>
                 Go to <mycolor><i><b>Granville Island</i></b></mycolor> and lunch there</p>
@@ -232,8 +230,8 @@
             <td>6-10am </p>
                 <br>10-10:30am </p>
                 <br>10:30-3pm </p>
-                <br><br>3-5pm </p>
-                <br><br><br>5-7:30pm </p>
+                <br>3-5pm </p>
+                <br>5-7:30pm </p>
             </td>
             <td>Wake up + breakfast + celebrate Jie's birthday</p>
                 Go to <mycolor><i><b>Van Dusen Garden</i></b></mycolor></p>
@@ -278,6 +276,7 @@
                 Otw to <mycolor><i><b>Yaohan</i></b></mycolor>+breakfast at <mycolor><i><b>Tim Hortons</i></b></mycolor> </p>
                 Tour to Whistler</p>
                 Have dinner at <mycolor><i><b>Yaohan/Aberdeen Center</i></b></mycolor></p>
+                Head back home and rest </p>
             </td>
             <td>
                 <br></p>
@@ -290,8 +289,8 @@
             <td>Day 14 </p> THURSDAY, 18th April</td>
             <td>5-8:30am </p>
                 8:30-9am </p>
-                <br><br>10:30-1pm </p>
-                <br>1:30-2:30pm </p>
+                <br>10:30-1pm </p>
+                1:30-2:30pm </p>
                 <br>2:30-4pm-... </p>
                 4-5pm-... </p>
                 5pm-... </p>
@@ -320,7 +319,7 @@
             <td>5-7:30am </p>
                 7:30-8am </p>
                 8-8:30am </p>
-                <br>8:30am-... </p>
+                <br><br>8:30am-... </p>
             </td>
             <td>wake up + prep</p>
                 Breakfast at home or ?</p>
@@ -346,9 +345,9 @@
                 12-1pm </p>
                 1-4pm </p>
                 4-6pm </p>
-                6-6:30pm </p>
+                <br>6-6:30pm </p>
                 <br>6:30-8pm </p>
-                8-9pm </p>
+                <br>8-9pm </p>
                 <br>9pm-...</p>
             </td>
             <td>wake up + prep</p>
@@ -409,24 +408,24 @@
                 10-1pm </p>
                 1-4pm </p>
                 <br><br>4-6pm </p>
-                <br>6-7pm </p>
-                7-8:30pm </p>
+                <br><br>6-7pm </p>
+                <br><br>7-8:30pm </p>
                 <br>8:30-9pm </p>
             </td>
             <td>wake up + prep</p>
                 Chill at home + lunch</p>
                 Goto <mycolor><i><b>dr Sun Yat Sen / International Village Mall</i></b></mycolor></p>
                 Goto <mycolor><i><b>Waterfront st</i></b></mycolor> and take waterboat to <mycolor><i><b>Lonsdale Quay</i></b></mycolor></p>
-                Dinner Vietnam Food
+                Dinner Vietnam Food </p>
                 Explore <mycolor><i><b>Lonsdale Quay Market / Waterfront Park</i></b></mycolor></p>
                 Head back home and rest </p>
             </td>
             <td>
                 <br></p>
                 <br></p>
-                <br></p>
-                <br></p>
-                Dex Burger Bar & Vinam Vietnamese Cuisine </p>
+                <br></p><br>
+                <br></p><br>
+                <br><br>Dex Burger Bar & Vinam Vietnamese Cuisine </p>
                 sunset at ard 7:51pm </p>
             </td>
         </tr>
