--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 12-2pm </p>
                 <br>2-4:30pm </p>
                 <br><br>4:30-6pm </p>
-                <br><br>6-8pm </p>
+                <br>6-8pm </p>
             </td>
             <td>Wake up + breakfast</p>
                 Chill at Home + Lunch</p>
@@ -79,7 +79,7 @@
                  </p><br>
                  </p><br>
                  </p><br>
-                 There are shops/food court etc, can chill at cafe</p>
+                 <br><br>There are shops/food court etc, can chill at cafe</p>
             </td>
         </tr>
         <tr>
@@ -104,7 +104,7 @@
                 10-11am </p>
                 <br>11-2pm </p>
                 <br><br>2-3:30pm </p>
-                <br><br>3:30-5pm </p><br>
+                <br>3:30-5pm </p><br>
                 <br>6-10am </p> 
                 10-1pm </p>
                 1-4pm </p>
