--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <br>11-2pm </p>
                 <br><br>2-3:30pm </p>
                 <br>3:30-5pm </p><br>
-                <br>6-10am </p> 
+                <br><br>6-10am </p> 
                 10-1pm </p>
                 1-4pm </p>
                 4-4:30pm </p>
@@ -128,17 +128,17 @@
             <td>6-10am </p> 
                 10-1:30pm </p>
                 1:30-3pm </p>
-                <br>3-4pm </p>
+                <br><br>3-4pm </p>
                 <br>4-5pm </p>
                 <br>5-5:30pm </p>
                 <br><br>5:30-6pm </p>
                 <br><br>6-6:30pm </p>
-                <br>6:30-8pm </p>
-                <br><br>8-9pm </p>
+                6:30-8pm </p>
+                8-9pm </p>
             </td>
             <td>Wake up + breakfast</p>
                 Chill at Home + Lunch</p>
-                Take train to <mycolor><i><b>Vancouver City Centre</i></b></mycolor></p>
+                <br>Take train to <mycolor><i><b>Vancouver City Centre</i></b></mycolor></p>
                 Walk around <mycolor><i><b>CF Pacific Centre</i></b></mycolor></p>
                 Chill at <mycolor><i><b>Tim Hortons</i></b></mycolor> nearby</p>
                 Can explore and take picture at <mycolor><i><b>Vancouver Art Gallery</i></b></mycolor></p>
@@ -210,7 +210,7 @@
                 <br>10-2pm </p>
                 <br>2-4:30pm </p>
                 <br>4:30-6pm </p>
-                <br><br>6-6:30pm </p>
+                <br><br><br>6-6:30pm </p>
             </td>
             <td>Wake up + breakfast</p>
                 Go to <mycolor><i><b>Granville Island</i></b></mycolor> and lunch there</p>
@@ -281,6 +281,7 @@
             <td>
                 <br></p>
                 <br></p>
+                <br></p>
                 Eat Ohyama Ramen? </p>
             </td>
         </tr>
@@ -306,11 +307,11 @@
             <td>
                 <br></p>
                 <br></p>
-                by Westjet WS 108 </p>
+                <br>by Westjet WS 108 </p>
                 Can consider Subway or Bistro on the bow </p>
                 <br></p>
                 <br></p>
-                Can walk to Calgary Tower, dinner at First Street Market, Buy groceries at H Mart Calgary Downtown, light snack/water in Centre Point Grocery </p>
+                <br>Can walk to Calgary Tower, dinner at First Street Market, Buy groceries at H Mart Calgary Downtown, light snack/water in Centre Point Grocery </p>
             </td>
         </tr>
 
@@ -347,7 +348,7 @@
                 4-6pm </p>
                 <br>6-6:30pm </p>
                 <br>6:30-8pm </p>
-                <br>8-9pm </p>
+                8-9pm </p>
                 <br>9pm-...</p>
             </td>
             <td>wake up + prep</p>
@@ -393,7 +394,7 @@
             <td>
                 <br></p>
                 <br></p>
-                check out time is at 10am ? </p>
+                <br>check out time is at 10am ? </p>
                 Mall opens at 10AM </p>
                 or just eat at TD Square Mall </p>
                 <br></p>
@@ -410,7 +411,7 @@
                 <br><br>4-6pm </p>
                 <br><br>6-7pm </p>
                 <br><br>7-8:30pm </p>
-                <br>8:30-9pm </p>
+                8:30-9pm </p>
             </td>
             <td>wake up + prep</p>
                 Chill at home + lunch</p>
@@ -469,7 +470,7 @@
                 <br></p>
                 <br></p>
                 AC007 - 467EYL </p>
-                CX797 - 467EYL </p>
+                <br>CX797 - 467EYL </p>
             </td>
         </tr>
         <!-- Add more rows as needed -->
