--- a/index.html
+++ b/index.html
@@ -125,6 +125,16 @@
         
         <tr>
             <td>Day 5 </p> TUESDAY, 9th April</td>
+            <td>6-10am </p>
+            </td>
+            <td>Wake up + breakfast</p>
+                Chill at home + Lunch</p>
+                Can explore Aberdeen Center, Yaohan - T&T supermarket</p>
+                Collect Mum's medicines at <mycolor><i><b>Pure Integration Pharmacy Oak </i></b></mycolor></p>
+            </td>
+        </tr>
+       <tr>
+            <td>Day 6 </p> WEDNESDAY, 10th April</td>
             <td>6-10am </p> 
                 10-1:30pm </p>
                 1:30-3pm </p>
@@ -146,15 +156,6 @@
                 Can walk to <mycolor><i><b>Banana Leaf</i></b></mycolor> for dinner</p>
                 Dinner</p>
                 Head back home and dinner</p>
-            </td>
-        </tr>
-       <tr>
-            <td>Day 6 </p> WEDNESDAY, 10th April</td>
-            <td>6-10am </p>
-            </td>
-            <td>Wake up + breakfast</p>
-                Chill at home + Lunch</p>
-                Can explore the park downstairs, BK, Sbux, etc</p>
             </td>
         </tr>
         
