--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 <br></p>
                 <br>by Westjet WS 108 </p>
                 Can consider Subway or Bistro on the bow </p>
-                <br></p>
+                111 14 Avenue Southeast 307, Calgary, AB T2G 1C7, Canada</p>
                 <br></p>
                 <br>Can walk to Calgary Tower, dinner at First Street Market, Buy groceries at H Mart Calgary Downtown, light snack/water in Centre Point Grocery </p>
             </td>
