--- a/index.html
+++ b/index.html
@@ -256,11 +256,11 @@
                 <br>CX797 - 467EYL </p>
             </td>
         </tr>
-        <tr><s>
-            <td>Day 1 </p> FRIDAY, 5th April</td>
-            <td>7:25-8pm </p> 
+        <tr>
+            <td><s>Day 1 </p> FRIDAY, 5th April</s></td>
+            <td><s>7:25-8pm </p> 
                 <br>8-8:30pm </p>
-                8:30pm-... </p>
+                8:30pm-... </s></p>
             </td>
             <td>Dad and Jie landed in YVR</p>
                 Otw Home</p>
